overflow fix

--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -38,6 +38,8 @@
   box-sizing: inherit;
   margin: 0px;
   padding: 0px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 html {
